update to maud.io css
materialfy

--- a/index.html
+++ b/index.html
@@ -127,17 +127,18 @@
 			body{
 				background-color:#65C6E7;
 			}
+			.text-maud{
+			  color: #65C6E7;
+			}
 		</style>
 	</head>
 
 	<body>
-		<div class="container">
-			<div class="jumbotron-io top">
-				<center>
-					<p><img src="img/icon.png" width="360" class="img-thumbnail" /></p>
-					<h1><span class="title"><span class="text-maud">モードちゃん</span>かわいすぎか</span></h1>
-					<p><a class="btn btn-xlg btn-primary" role="button" href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fkawaii.maud.io&ref_src=twsrc%5Etfw&text=%E3%83%A2%E3%83%BC%E3%83%89%E3%81%A1%E3%82%83%E3%82%93%E3%81%8B%E3%82%8F%E3%81%84%E3%81%99%E3%81%8E%E3%81%8B%20%23HowCuteMaudIs&tw_p=tweetbutton&url=https%3A%2F%2Fkawaii.maud.io" target="_blank"><span class="icon-twitter"></span></a></p>
-				</center>
+		<div class="container text-center">
+				<img src="img/icon.png" class="img-thumbnail hoverable top" width="360px" />
+			<div class="jumbotron-io hovered-lv2">
+				<h1><span class="text-maud">モードちゃん</span>かわいすぎか</h1>
+				<p><a class="btn btn-xlg btn-primary hoverable" role="button" href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fkawaii.maud.io&ref_src=twsrc%5Etfw&text=%E3%83%A2%E3%83%BC%E3%83%89%E3%81%A1%E3%82%83%E3%82%93%E3%81%8B%E3%82%8F%E3%81%84%E3%81%99%E3%81%8E%E3%81%8B%20%23HowCuteMaudIs&tw_p=tweetbutton&url=https%3A%2F%2Fkawaii.maud.io" target="_blank"><span class="icon-twitter"></span></a></p>
 			</div>
 		</div>
 
