--- a/index.html
+++ b/index.html
@@ -87,69 +87,142 @@
 ;##*   ;;;;;;;;;;;;*##/[##|  ; ;;;;;;;*##*###*     ]**;;;;;;;;;;;;;;;;;;;#*****;*;;******;******#*;;;;;;;;;;;;;;;;;;**  ;; ;;;;;;;;#**##*|  ;   ;\##* ; *#*[ '*##*;;; ;;;;
 ##*+  ;;;;;;;;;;;;*##* *#*[ ;;;;;;;;;;#####*'      |#*;;;;;;;;;;;;;;;;;;#* ;;;;;;;;;;;;;;;;;;;; *#;;;;;;;;;;;;;;;;;;*#| ;;;;;;;;;;;#*'*###*.  ;   *##*;;*##*  \##*;;;;;;;;
 
-  snowfall: https://github.com/loktar00/JQuery-Snowfall
-
-  ====================================================================
-  LICENSE
-  ====================================================================
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-
-      http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
-  ====================================================================
-
 -->
 <!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>モードちゃんかわいすぎか</title>
+		<title>モードちゃんｶﾜｲｲﾔｯﾀｰ</title>
 
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="lindwurm's profile">
+		<meta name="description" content="モードちゃんはかわいい">
 		<meta name="author" content="lindwurm">
 
 		<link rel="shortcut icon" href="https://maud.io/apple-touch-icon.png">
 
-		<link href="https://maud.io/css/bootstrap.css" rel="stylesheet">
-		<link href="https://maud.io/css/icomoon.css" rel="stylesheet">
-		<link href="https://maud.io/css/koruri.css" rel="stylesheet">
-		<link href="https://maud.io/css/style.css" rel="stylesheet">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
 		<style>
 			body{
 				background-color:#65C6E7;
 			}
-			.text-maud{
-			  color: #65C6E7;
+			.jumbotron{
+				margin-top: 3rem;
+				background-color: #fff;
+			}
+			pre{
+				font-size: 0.3vw;
 			}
 		</style>
 	</head>
 
 	<body>
 		<div class="container text-center">
-				<img src="img/icon.png" class="img-thumbnail hoverable top" width="360px" />
-			<div class="jumbotron-io hovered-lv2">
-				<h1><span class="text-maud">モードちゃん</span>かわいすぎか</h1>
-				<p><a class="btn btn-xlg btn-primary hoverable" role="button" href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fkawaii.maud.io&ref_src=twsrc%5Etfw&text=%E3%83%A2%E3%83%BC%E3%83%89%E3%81%A1%E3%82%83%E3%82%93%E3%81%8B%E3%82%8F%E3%81%84%E3%81%99%E3%81%8E%E3%81%8B%20%23HowCuteMaudIs&tw_p=tweetbutton&url=https%3A%2F%2Fkawaii.maud.io" target="_blank"><span class="icon-twitter"></span></a></p>
+			<div class="jumbotron">
+				<img src="img/icon.png" class="img-thumbnail" width="360px" />
+				<h1>モードちゃんｶﾜｲｲﾔｯﾀｰ</h1>
+				<p>
+					<a class="btn btn-lg btn-outline-secondary" data-toggle="collapse" href="#collapseMaud" role="button" aria-expanded="false" aria-controls="collapseMaud">Show AA</a>
+				</p>
+				<div class="collapse" id="collapseMaud">
+					<pre>
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;*;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; ;;;;;;*;;;;;*;;;;;;;;;;;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;*###* ;;.;;;  ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; ; ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;.;*###############*; ;;;;;;;;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;;;;;;;;*####;*##*;;*#####**;*;  ;;;;;;;;;;;;;;;;;;;;;;;; ;;;;;;****######****;;;;;;;;;;  ;;;;;;;;;;;;;;;;;;;;;;;;*##;;;;;;;;;;;;*#####** ;;;;;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;;;;;;####;;;;;*##[ ##*;;;*######**;;;;;;;;;;;;;;; ;;;**######*******- - **********#######***;; ;;;;;;;;;;;;;;;;;;|#*;;;;;;;;;;;;*#*;;*###***.;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;;;;###;;;;;;;;*##**##*;;;;;;;;;*###*;;;;;;; ;;***####***-; ~~                ;;;;;;   ;****####**;;; ;;;;;;;;;;;;*##*;;*######*;*#*;;;;;;*###*;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;*##*;;;;;;##*;;######*;*;;;;;;;;##**;;;;***###***- ~                ;;;;;;;;;;;;;;;;;;;;;;;  ;***####**; ;;;;;;;;*##*;;*##**##*;*#####;;;;*##*;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;*##*;;;######*;;####*;;#####*;;*##*;;*###*** ~        ;; ;;;*******#***; ;;;;;;;;;;;;;;;;;;;;;;;; ;-**####**;;;;;|##*;;;##*]###;*##**##*;;##*;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;; *##*;;###**##*;####*;;#####*;;######**-~        ;;  ;*****-~      ~~'-****;;;;;;;;;;;;;;;;;;;;;;;;;;;  ***###*;.]###;;;##*|###;###**##*;###*;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;; *##;;*##**###;;##*;;######;;###**+~      ;;;;; ;****-~                 '*;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; **###*###*;;##* *##;####***####**;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;;;+###;;########;;##;;########**       ;;;;;;;;***+        ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; **####*;;###*###** ~    ~'-*##**;;;;;;;;+;;;
+;;;;;;;;;;;;;;;;;;*##**- ~~~'**###;;;#####*+~     ;;;;;;; ;***~     ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; **##;;;####*             \*##* ;;;;;;;;;;
+;;;;;;;; ;;;;;;;/##*/          |##;;###*-      ;;;;;;; ;***    ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; ;;; ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; *#;;;##*'   ;;;;;;;;;;;  \##*;;;;;;;;;;
+;;;;;; ;;; ;;;;.*#*   ;;;;;;;;;*#;;#**~     ;;;;;;;;; **'  ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;**;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;|##;##/  ;;;;;;;;;;;;;;;; *##*;;;;;;; ;
+;;;;;;;; ;;;;; *#*  ;;;;;;;;;; *##*       ;;;;;;;;;;;;; ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;**;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; *###*;**;;;;;;;;;;;;;;;;;+##*;;;;; ;;;
+;;;;;;;;;; ;;;*##/  ;;;;;;;; ;*#*          ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; #*;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;'*#*  *#*. ;;;;;;;;;;;;;;;*##* ;.;;; ;
+;;;;;;;;;;;;;.##*  ;;;;;;;;;*#*'           ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;  ;;;;;;;;;;;;;;;;;;]#*;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; **[;;[#****;;;;;;;;;;;;; *####** .;;;
+;;;;;;;;;;;;;*##/ ;;;;;;; *#*/               ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;  ;;;;;;;;;;;;;;;;;;]#*;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;]#*;;;[#['*#* ;;;;;;;;;;;;;#*;;####**
+;;;;;; ;;; ; ##*[ ;;;;; ;**/                  ;;;;;;;;;;;;;;;;;;;;;;;;;;;;  ;;;;;;;;;;;;;;;;;  |#*;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;|#*;;;|#*;;'*#* ;;;;;;;; ;;#*;;;;;*###
+;;;; ;;; ;;;*##* ;;;;; *#*                    ;;;;;;;  ;;;;;;;;;;;;;;;;;;;  ;;;;;;;;;;;;;;;;   |#*;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;|#*;;;]#* ;;;\** ;;;;;;;;;;##;;;;;;;;*
+;;;;;; ;;;/####* ;;;;;**                     ;;;;;;    ;;;;;;;;;;;;;;;;;;   ;;;;;;;;;;;;;      [*|;;;;;;;;   ;;;;;;;;;  ;;;;;;;;;;;;|#*;;; *#*;;;;'*#* ;;;;;;;;**;;;;;;;;;
+;;;; ;;;+*##**#[;;;;*#*                     ;;;;;;     ;;;;;;;;;;;;;;;;;;   ;;;;;;;;;;;;;      **;;;;;;;;     ;;;;;;;;   ;;;;;;;;;;;|#[;;;;'*#* ;;;;\**_;;;;;;;**;;;;;;;;;
+;;;;;; *##*;;|* ;;;**/               ;     ;;;;;;;;   ;;;;;;;;;;;;;;;;;;;  ;;;;;;;;;;;;;;     |##[;;;;;;;     ;;;;;;;;;;;;;;;;;;;;;;*#*;;;;; \*** ;;;'***;;;;;;**;;;;;;;*;
+;;;; *###*   **;;;**[   ;;         ;;;;;;;;;;;;;;;;;;;;;;;;;;;;; ;;;;; ;;  ;;;;;;;;;;;;;;;;   [##*;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;|#*;;;;   '****  ;;\#*;;;;;#*;;;;;;**;
+;;+ *##* ;|***#;;#*'   ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;   ;;;;+;   ;;;;;;;;;;;;;;;;  |#*#*;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; **[;;;      '-****;*#*;;;;#*;;;;#** ;
+;;;*##*;;;;\###*#*[   ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;  ;;;;;**|  ;;;;;;;;;;;;;;;;; **~**;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;\#*;;;         ~ -********###**-  ;;;
+;;*##*;;;;;;'**#*[   ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;    ;;;; **   ;;;;;;;;;;;;;;;; *#/ |* ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; **[;;;                 ~~~~~   ;;;;
+;.##* ;;;;;;;;*#/   ;;;;;;;;;;;;;;;;;;;;;;;;;;;  ;;;;;;;;;;;    ;;;;;;**   ;;;;;;;;;;;;;;;;/#/  *#[;;;;;;;;;;;**;;;;;;;;;;;;;;;;;;;;;; ** ;;;         ;;;        ;;;;;;;;
+;*##*;;;;;;;;/#*    ;;;;;;;;;;;;;;;;;;;;;;;;;;   ;;;;;;;;;;   +[;;;;;;#*   ;;;;;;;;;;;;;;;*#*   \#*;;;;;;;;;;]#*;;;;;;;;;;;;;;;;;;;;;;.*#*.;;;;;   ;;;;;;;;;;;;;;;;;;;;;;
+;*##*;;;;;;;/#*    ;;;;;;;;;;;;;;;;;;;;;;;;;;;   ;;;;;;;;;   .*[;;;;;*#*   ;;;;;;;;;;;;; *#/    |** ;;;;;;;;;|#*;;;;;;;;;;;;;;;;;;;;;;*#**** ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;*##*;;;;;; *#[   ;;;;;;;;;;;;;;;;;;;;;;;;;;;    ;;;;;;;    /*#*;;; ;*#*   ;;;;;;;;;;;;/***      |#*;;;;;;;; **;;;;;;;;;;;;;;;;;;;;;; *#*;;*#* ;;;;;;;;;;;;;;;;;;;;;;;;;;;
+; ##* ;;;;;*#*   ;;;;;;;;;;;;;;;;;;;;;;;;;;;     ;;;;;;;- _/**#*;;;;;##*   ;;;;;;;;;; *#*    _  _]#* ;;;;;;;|#*;;;;;;;;;;;;;;;;;;;;;; **;;;;;*#**  ;;;;;;;;;;;;;;;;;;;;;;;
+;;\##*;;;;/#*    ;;;;;;;;;;;;;;;;;;;;;;;;; ;;********;   *#**|**;;;;*#**  ;;;;;;;;;;.**   *********#***;-   |#*;;;;;;;;;;;;;;;;;;;;;;|**;;;;;;;;;*#**-   ;;;;;;;;;;;; ;;##
+;; **###;;*#[   ;;;;;;;;;;;;;;;;;;;;;;;;;***+~ ;;;;;    /#*'  ** ;;*#/|#*  ;;;;;;;.*#*            ]**[ ;*** [#*;;;;;;;;;;;;;;;;;;;;;;|**;;;;;;;;;;*#*;*#*******;;;;**###*;
+;; ;  **###*    ;;;;;;;;;;;;;;;;;;;;;;;;;;    ;;;;;   .***    ** ;;#* ]**  ;;;;;; **/              |#\  ;; |*#*;; ;;;;;;;;;;;;;;;;;;;|**;;;;;;;;;;;**;;;;;;;;;;*####**;; ;
+;; ;;; ;|##[    ;;;;;;;;;;;;;;;;;;;;;;;;;    ;;;;   .*#*      |#;;#*   |#\ ;;;; *#*'                **[  ; ]#***;;;;;;;;;;;;;;;;;;;;; *#*;;;;;;;;;;;*#*;;;;;;;;*####*;;; ;
+';;; ;; *#*|   ;;;;;;;;;;;;;;;;;;;;;;;;;    ;;;    ***       |*#*#*     **[ ;;/***                  +#*    |#*|#*;;;;;;;;;;;;;;;;;;;;;*#*;;;;;;;;  ;;***;;;;;;;*#*##*; ;;;
+;; ;;; |##*    ;;;;;;;;;;;;;;;;;;;;;;;;;    ;;   +***        |###*      ]**[ ***                     \#\   |#* **;;;;;;;;;;;;;;;;;;;;;\#*;;;;;;;;  ;;;*#* ;;;;;*#*##*;;; ;
+ ;;; ;;*##*    ;;;;;;;;;;;;;;;;;;;;;;;     ;   /***          ]##*        ]****/              _ - ._   *#\  [#[ '#*;;;;;;;;;;;;;;;;;;;; *#\;;;;;;;  ;;;;;#*;;;;;*#**##* ;;;
+;  ;; *###*    ;;;;;;;;;;;;;;;;;;;;;;;    ;  /**********-    [*/          \*#/             |**___-*'   *#\ [#[  *#*;;;;;;;;;;;;;;;;;; ; ** ;;;;;;  ]*;;;;*#*;;;##;*##*;;
+';; ]*##*#*    ;;;;;;;;;;;;;;;;;;;;;       +***   |~   ~                   '*                 __  - - -**#**#[   *#*;;;;;;;;;;;;;;;;; ;; ** ;;;;;   **;;;;;****#*;;*#*[;;;
+;  ;*##*]**    ;;;;;;;;;;;;;;;;;;;;    _ **##****##*##*~*-_                               +**##################****#*;;;;;;;;;;;;;;;; ;;;\#* ;;;;;  \#*;;;;;;**#*;;*##*;
+ ;;##**;]**|   ;;;;;;;;;;;;;;;;;;;  -**###################*'                             |###########################**_ ;;;;;;;;;;;  ;; |##*+;;;;   *#*;;;;;;;**##*###*;;
+;###*';**#*|   ;;;;;;;;;;;;;;;;; /*#######################*                              '***##########################**;;;;;;;;;;;  ;; |*;*#\;;;;  +*#*#######*##;*##*
+###***#####|  |[;;;;;;;;;;;;;;;  ]*#######################\                                 *##########################* ;;;;;;;;;;;    ]#*;;*#* ;;;  \#*;;;*#*;;;;;;*##*;
+#*****-;|##* |**;;;;;;;;;;;;;   .***####** *##############*                                |###################* **#####\ ;;;;;;;;;     |#*;;;;*** ;   \**;;##;;;;;;;;##*
+ ;;; ; ;]*#*[|#*;;;;;;;;;;;;   *** |#**'  ]*****##########*                               |*****###############*[  \*#*\#\ ;;;;;;;;     [#;;;;; *#*.;   \#*##;;;;;;;;;*##*
+;; ; ; ; [##*|#*;;;;;;;;;;;  /**'  **[         '*#########*|                                    ~'*#############[   \*[ *#\ ;;;;;;;    ]#*;;;;;;;;;**-.  \##*;;;;;;;;;;##*
+   ; ; ; ]##*+#**;;;;;;;;  .***    *[           +######*;*#|                                      |#############|    '+  \*\ ;;;;;;    /#*; ;;;;;;;;;*#****#*;;;;;;;;;;*##
+ ;;  ; ;  [####***;;;;;;  /*#*[           /-; ~;;######*;;#[                               +.   -*#######*;;;###[         **\ ;;;;    ]******-;;;;;;;;;*#*;*#*;;;;;;;;;;*#
+;  ;;;  ;;]####**#*;;;;; *#*;#*           [#*;;;;*#####*;;*|                               **;;;;;#######*;;;;#*|         ]**[ ;;;    ***  '\**;;;;;;;.#*;;;;;;;;;;;;;;;+#
+ ;   ; ' ;;*###[;*#*;;; *#;;;*#*          ]#*;;;;;#####*;**                                [#*;;;;#######*;;;;#*          ]##* ;;;   /#*     +**;;;;;/##;;;;;;;;;;;;;  ;;*
+;  ; ;   ; ]###[;;*#*;;*#*;;;;**[          [#*;;;;*###*;;#*                                ]**;;;;*#####*;;;;#*           ****[ ;   /**        *#*;;/#*;;;;;;;;;;;;;;  ;;
+ ;;  ;;;  ;]###[;;;;**;;;;;;;;;#*          ]**;;;;;****;*#|                                 \#*;;;;*****;;;;#*           |#**#*    /**          [#\*#*;;;;;;;;; ;;;;;   ;;
+;  ;;   ;; |##* ;;;;;*#*;;;;;;;*#|          +**;;;;;;;;;**                                   *#*;;;;;;;;;;;#*            [#;;**   *##|          ]*##;;;;;;;;;;;;;;;;;   ;;
+ ;;   ;;  ;|##* ;;;;;;;;**;;;;;;#*           \**;;;;;;;**/                                   '**;;;;;;;;;*#*            ]**;;*#\/*##*|           |#*;;;;;;;;;;;;;;;;;   ;;
+;  ;;   ;+ |##*   ;;;;;;*#***;;;**            ]*#######*/                                      \*******;**/             |#*;;*###;;#*            [#*;;**;;;;;;;;;;;;;;  ;;
+ ;;   ;   ;*##* ;  ;;;;;*#| ;;;;#*             '' ' -;'                                          ~'-  -                **;;;;;;;;;#*           /#*;;;*#*;;;;;;;;;;;;;   ;
+;  ;;   ;; [##| ;  ;;;;;*#* ;;;;#*                                                                                     ]#*;;;;;;;;*#|          .*#;;;;*#*;;; ;;; ;;;;;   ;
+ ;;   ;   ;*##[ ;  ;;;;;*#* ;;;;#*                                                                                     |#;;;;;;;;;*#[        .*#*;;;;;;#*;;;;;;;;;;;;;
+;  ;     .]*#*| ;  ; ;;;;#* ;;;*#*                                                                                     **;;;;;;;; **|       *###*;;;;;;#*;; ;;;;;;;;;;
+       ; .]##*  ;    ;;;;#* ;;;*#*                                                                                    ]#*;;;;;;;;]#*     -*#####*;;;;;*#*;;; ;;;;;;;;;;
+         .|##*  ;    ;;;;#* ;;; #*|                                                                                   |#*;;;;;;;;|#* _-*##** *##*;;;;;*##;;;;;;;;;;;;;;
+          *##* ;;    ;;;;#*  ;;|##[                                                                                   [#[;;;;;;;;|#####*** ; [##*;;;; *##*;;; ;;;;;;;;;
+          *##[ ;;+   ;;;;#*  ;; *#*_                                                                                 ]** ;;;;;;;;*##**   ;   |##*;;;;;*##*;;;;;;;;;;;;;;
+       ; ]##*| ;;|   ;;;;#*  ;; ;*##*.                                     _                                         ]#* ;;;;; ;;[##*  ; '   |##*;;;;;|##*;;;;;;;;;;;;;;
+ ;       |##* ; ;|  ;;;;;#*  ;; ;;;;##*-                                 -****                                       '#* ;;;;;;; *##[    '   |##*;;;; *##*; ; ;;;;;;;;;;;
+    ;   ;[##| ; ;    ;;;;**  ;;;;;;;*###**+_                                                                      **###| ;;;;;;; *#*    ;'   |##*;;;; *##*;;;;;;;;;;;;;;;
+ ;    ; ]*#*| ; ;    ;;;;#*  ;;;;;;;;###*##**-_                                                              -**###*###[ ;;;;;;;]*#*  ;  ';; [##*;;;; *###*;;;;;;;;;;;;;;;
+;  ;    /##*  ;;;   ;;;;;#*|  ;;;;;;;##*['**###**-+_                                                     -**###**+ |##*  ;;; ;;;|##*     '  ;*##*;;;; *###*;;;;;;;;;;;;;;;
+ ;;   ; [##* ;;;;   ;;;;;**|  ;;;;;;;*##*+   ****###**-__                                         _ -***###**;' ;; |##* ;;;; ;;;|##*  ;  +;; |##*; ;; *###*;;;;;;;;;;;;;;;
+;   ;   *#*  ;;;;   ;;;;;**|  ;;;;;;;*##*+;;  ;; '***####**-_.                                   /*##***+';;  ; __ *##* ;;;; ;;;|##*;   ;   ;|##*; ;; *###*;;;; ;;;;;;;;;;
+ ;;   ;|##* ;;;;;   ;;;;;**|  ;;;;;;;*##*+  ;   ;;   ; +***###***;-  .                 _ -+**|  /####*~*;. +;*#####*##[ ;;;;;;;;|##*  ;  +;  ]##*;;;; *####*;;;;;;;;;;;;;;
+;   ;  *#*[ ;; ;;   ;;;;;#*|  ;; ;;;;;##*|;   ;;   ;   ;. |;*##########*****;_____********-     |##;###########;;;####| ;;;;;;;;|##*;   ;.  ; *##*;;;;|####*;;;;;;;;;;;;;;
+ ;;   |##* ;;;;;;  ;;;;;*#*|  ;; ;;;;;##*.  ;   ;;   ;   ;+*###;;;;######;;;#***#****           |#;;;;;;###;;;;;;;;;##| ;;;;;;;;|##*  ;  +;; ]*##*;;;;[####*;;;; ;;;;;;;;;
+     _*##[ ;;;;;   ;;;;;*#*|  ;;;;;;;;*##[ ;  ;          /###;;;;;;;;##;;;;;;##****|_      ;_-**##*;;;;;###;;;;;;;;;#*  ;;;;;;;;|##*     +  ; |##*;;;;|#####*;;;;;;;;;;;;;
+     /##*  ;; ;;|  ;;;;;##*|  ;;;;;;;;*##*              |###;;;;;;;;##;;;;;;;;;;##*#######;;;;;;;;;;;;;;;##;;;;;;;;;#*  ;;;;;;;;;###[    |    |##* ;;;[#####*;;;;;;;;;;;;;
+     *##/ ;;;;;;  ;;;;;*##*|  ;;;;;;;;*##*              *##;;;;######*;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;######;;;;;#*  ;;;;;;;;;*##[    .     [##[;;;|##**##*;;;;;;;;;;;;
+    .##*  ;;;;;;+ ;;;;;*##*|  ;;;;;;;;*##*            ./#######;;;;###;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;###;;;;####;;#*  ;;; ;;;;;*##*    |     |##*;;;|##*\##*;;;;;;;;;;;;
+   \*##/  ;; ;;;;;;;;;;###*  ;;;;;;;;;*##*          +*######;;;;;;;;;;#*;;;;;;;;;;*#******;;;;;;;;;;;##;;;;;;;;;#####*  ;;; ;;;;;*##*    |     ]##* ;;|##*]*##;; ;;;;;;;;;
+   *##*  ;;;;;;; ;;;;;####*  ;; ;;;;;;*##*        \*###;;;;;;;;;;;;;;;;;*#*;;;;;;*#*;;;;*#*;;;;;;###;;;;;;;;;;;;;;;;#*  ;;;;;;;;;;##*    +      *##[;; *##[\##*;;;; ;;;;;;
+  .*#*  ;;; ;;;;;;;;;*####*  ;;;;;;;;;*##*      .;*###;;;;;;;;;;;;;;;;;;;;;*#######*;;;;|######*;;;;;;;;;;;;;;;;;;;;#*  ;;;;;;;;;;##*[   |      |##*;;;*##* *##*;;;;;;;;;;
+  *##*  ;;;;;;;;;;;;;#####*  ;;;;;;;;;*##* +  ;*##***#;;;;;;;;;;;;;;;;;;;;;*#*;;;** ;;;;*#;;;##*;;;;;;;;;;;;;;;;;;;;#*  ;;;;;;;;;;*##[   +      ]##* ;;\##* \##*;;;; ;;;;;
+ *##*  ;;;;;;;;;;;;;##**##*  ;;;;;;;;;*##[ +*##**   *#;;;;;;;;;;;;;;;;;;;;*##;;;;##*;;;;*#;;;*##;;;;;;;;;;;;;;;;;;;;#*  ;; ;;;;;;;*##**. +;   ;  [##*;;|##*  [##*;;;;;;;;;
+;##*   ;;;;;;;;;;;;*##/[##|  ; ;;;;;;;*##*###*     ]**;;;;;;;;;;;;;;;;;;;#*****;*;;******;******#*;;;;;;;;;;;;;;;;;;**  ;; ;;;;;;;;#**##*|  ;   ;\##* ; *#*[ '*##*;;; ;;;;
+##*+  ;;;;;;;;;;;;*##* *#*[ ;;;;;;;;;;#####*'      |#*;;;;;;;;;;;;;;;;;;#* ;;;;;;;;;;;;;;;;;;;; *#;;;;;;;;;;;;;;;;;;*#| ;;;;;;;;;;;#*'*###*.  ;   *##*;;*##*  \##*;;;;;;;;
+					</pre>
+				</div>
+				<p><a class="btn btn-lg btn-info" role="button" href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Fkawaii.maud.io&ref_src=twsrc%5Etfw&text=%E3%83%A2%E3%83%BC%E3%83%89%E3%81%A1%E3%82%83%E3%82%93%EF%BD%B6%EF%BE%9C%EF%BD%B2%EF%BD%B2%EF%BE%94%EF%BD%AF%EF%BE%80%EF%BD%B0%20%23HowCuteMaudIs&tw_p=tweetbutton&url=https%3A%2F%2Fkawaii.maud.io" target="_blank">Tweet</a> <a class="btn btn-lg btn-primary" role="button" href="web+mastodon://share?text=モードちゃんｶﾜｲｲﾔｯﾀｰ%20%23HowCuteMaudIs%20https%3A%2F%2Fkawaii.maud.io" target="_blank">Toot!</a></p>
 			</div>
 		</div>
 
 		<!-- Bootstrap core JavaScript
 		================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
-		<script src="https://maud.io/js/jquery.js"></script>
-		<script src="bootstrap.js"></script>
-		<script src='snowfall.js'></script>
-    <script type='text/javascript'>
-      snowFall.snow(document.body, {image : "https://upload.wikimedia.org/wikipedia/commons/b/bf/Emoji_u2728.svg", minSize: 12, maxSize:96});
-    </script>
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
 	</body>
+
 </html>
